--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "body-parser": "^1.17.2",
     "css-loader": "^0.28.4",
     "express": "^4.15.3",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
     "vue": "^2.3.4",
     "vue-loader": "^12.2.1",
     "vue-template-compiler": "^2.3.4",
@@ -36,5 +38,9 @@
     "url": "https://github.com/ngerritsen/remote-node/issues"
   },
   "homepage": "https://github.com/ngerritsen/remote-node#readme",
-  "babel": { "presets": ["env"] }
+  "babel": {
+    "presets": [
+      "env"
+    ]
+  }
 }
