--- a/package.json
+++ b/package.json
@@ -3,26 +3,8 @@
   "version": "1.0.0",
   "description": "Run Node.js code on your server from a web client.",
   "main": "server/index.js",
-  "dependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
-    "babel-preset-env": "^1.5.2",
-    "body-parser": "^1.17.2",
-    "css-loader": "^0.28.4",
-    "express": "^4.15.3",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "vue": "^2.3.4",
-    "vue-loader": "^12.2.1",
-    "vue-template-compiler": "^2.3.4",
-    "vuex": "^2.3.1",
-    "webpack": "^3.0.0"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node .",
-    "build": "NODE_ENV=production webpack",
-    "watch": "webpack --watch"
+    "start": "node ."
   },
   "repository": {
     "type": "git",
@@ -38,9 +20,8 @@
     "url": "https://github.com/ngerritsen/remote-node/issues"
   },
   "homepage": "https://github.com/ngerritsen/remote-node#readme",
-  "babel": {
-    "presets": [
-      "env"
-    ]
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3"
   }
 }
